change to react apps

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "workspaces": [
-    "./utils",
-    "./app"
+    "./rollup",
+    "./react-app"
   ],
   "repository": {
     "type": "git",
